# tapper

wplan/: README.md  main.py  pyproject.toml
wplan/src/actions/: __init__.py  wplan_actions.py
wplan/src/driver/: __init__.py  selen_drv.py
wplan/src/window/: gif_window.py  styles.py
